--- a/WpdOstatni/MainWindow.xaml
+++ b/WpdOstatni/MainWindow.xaml
@@ -4,9 +4,14 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpdOstatni"
+        xmlns:vm="clr-namespace:WpdOstatni.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <vm:MainViewModel />
+    </Window.DataContext>
     <Grid>
-        
+        <TextBox Text="{Binding ActionText}" TextWrapping="Wrap" Margin="21,10,518.6,143" />
+        <Button Content="Button" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Command="{Binding DisplayTextCommand}" Margin="333,143,0,0"/>
     </Grid>
 </Window>
