--- a/WpdOstatni/MainWindow.xaml
+++ b/WpdOstatni/MainWindow.xaml
@@ -20,7 +20,6 @@
                     <StackPanel Orientation="Vertical">
                         <Label Content="{Binding Name}"/>
                         <Label Content="{Binding Age}"/>
-                        <Button>Edit</Button>
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
@@ -32,6 +31,7 @@
             <TextBox Text="{Binding CurrentUser.Age}"/>
             <Button Content="Edit user"></Button>
         </StackPanel>
+        <Button Command="{Binding RemoveUser}">Remove</Button>
         <TextBox Text="{Binding Curre}" TextWrapping="Wrap"/>
         <TextBox Text="{Binding ActionText}" TextWrapping="Wrap"/>
         <Button Content="Button" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Command="{Binding DisplayTextCommand}"/>
