--- a/WpdOstatni/MainWindow.xaml
+++ b/WpdOstatni/MainWindow.xaml
@@ -29,7 +29,7 @@
             <TextBox Text="{Binding CurrentUser.Name}"/>
             <Label Content="Age"/>
             <TextBox Text="{Binding CurrentUser.Age}"/>
-            <Button Content="Edit user"></Button>
+            <Button Command="{Binding UpdateUser}" Content="Edit user"></Button>
         </StackPanel>
         <Button Command="{Binding RemoveUser}">Remove</Button>
         <StackPanel Orientation="Vertical">
